--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="user_score_size">42</dimen>
-    <dimen name="crew_screen_height">80</dimen>
-    <dimen name="cast_screen_height">259</dimen>
-    <dimen name="movie_screen_height">300</dimen>
-    <dimen name="top_bar_height">80</dimen>
-    <dimen name="favorites_screen_column_width">130</dimen>
-    <dimen name="movie_card_height">220</dimen>
+    <dimen name="user_score_size">42dp</dimen>
+    <dimen name="crew_screen_height">80dp</dimen>
+    <dimen name="cast_screen_height">259dp</dimen>
+    <dimen name="movie_screen_height">300dp</dimen>
+    <dimen name="top_bar_height">80dp</dimen>
+    <dimen name="favorites_screen_column_width">130dp</dimen>
+    <dimen name="movie_card_height">220dp</dimen>
 </resources>
